<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="8dp"
        android:orientation="vertical"
        android:background="#3F51B5"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:hint="Nhập họ tên"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_fullname"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob"/>

            <EditText
                android:hint="Nhập ngày sinh"
                android:layout_marginLeft="20dp"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_dob"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <EditText
                android:hint="Tên đăng nhập"
                android:layout_marginLeft="20dp"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_username"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:hint="Nhập mật khẩu"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_password"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkpassword"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:hint="Nhập mật khẩu"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_checkpass"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:hint="Nhập địa chỉ"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_address"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:hint="Nhập số điện thoại"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_phone"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:hint="Nhập email"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_email"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register_confirm"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng kí"/>

    </LinearLayout>

</RelativeLayout>