<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#3F51B5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="8dp"
        android:background="#283593"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/txtv_top"
        style="@style/MyFirstStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Thông tin người dùng"/>


    <LinearLayout
        android:padding="2dp"
        android:id="@+id/top_layout"
        android:layout_below="@id/txtv_top"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15dp"
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname"/>

            <TextView
                android:textSize="15dp"
                android:layout_marginLeft="20dp"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtv_fullname"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15dp"
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob"/>

            <TextView
                android:textSize="15dp"
                android:layout_marginLeft="20dp"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtv_dob"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15dp"
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <TextView
                android:textSize="15dp"
                android:layout_marginLeft="20dp"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtv_username"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15dp"
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"/>

            <TextView
                android:textSize="15dp"
                android:layout_marginLeft="20dp"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtv_address"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15dp"
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"/>

            <TextView
                android:textSize="15dp"
                android:layout_marginLeft="20dp"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtv_phone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15dp"
                style="@style/MyFirstStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
            <TextView
                android:textSize="15dp"
                android:layout_marginLeft="20dp"
                style="@style/MyFirstStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtv_email"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_top"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:textSize="12dp"
                android:id="@+id/btn_editinfor"
                style="@style/MyButtonStyle"
                android:text="Chỉnh sửa thông tin"/>

            <Button
                android:textSize="12dp"
                android:id="@+id/btn_changepass"
                style="@style/MyButtonStyle"
                android:text="Đổi mật khẩu"/>

            <Button
                android:textSize="12dp"
                android:id="@+id/btn_logout"
                style="@style/MyButtonStyle"
                android:text="Đăng xuất"/>

        </LinearLayout>

        <Button
            android:layout_gravity="center"
            android:textSize="12dp"
            android:id="@+id/btn_exit"
            style="@style/MyButtonStyle"
            android:text="Thoát" />

    </LinearLayout>
</RelativeLayout>